external-crates/move/crates/move-compiler/tests/development/signed_ints/signed_int_inference.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_inference.move:4:17
  │
4 │         let _x: i64 = 1;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_inference.move:4:23
  │
4 │         let _x: i64 = 1;
  │                       ^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_inference.move:5:17
  │
5 │         let _y: i8 = 5;
  │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/signed_ints/signed_int_inference.move:5:22
  │
5 │         let _y: i8 = 5;
  │                      ^ Signed integer types are under development
